--- a/package.json
+++ b/package.json
@@ -6,16 +6,19 @@
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
-    "start": "npm run dev",
+    "postinstall": "npm run build",
+    "start": "node server.js",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
     "test": "npm run unit && npm run e2e",
     "lint": "eslint --ext .js,.vue src test/unit test/e2e/specs",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "express": "^4.17.1",
     "run": "^1.4.0",
+    "serve-static": "^1.14.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "ynab": "^1.16.0"
