--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "postinstall": "npm run build",
+    "start": "node server.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.4.3",
     "express": "^4.17.1",
+    "serve-static": "^1.14.1",
     "vue": "^2.6.10",
     "ynab": "^1.17.0"
   },
